# klopt

./: .clang-format  CMakeLists.txt  README.md
apps/: CMakeLists.txt  bindings.cpp  main.cpp
cli/: CMakeLists.txt  main.cpp
include/: finger.hpp  key_combo.hpp  key_press.hpp  layout.hpp  model.hpp  optimizer.hpp  phys_key.hpp  phys_layout.hpp
src/: CMakeLists.txt  key.cpp  layout.cpp  model.cpp  optimizer.cpp  phys_layout.cpp
tests/: CMakeLists.txt  test_key.cpp  test_layout.cpp  test_model.cpp
